@@ -146,6 +146,9 @@ public:
     ACE_THROW_SPEC ((CORBA::SystemException));
 
 
+  virtual void shutdown (ACE_ENV_SINGLE_ARG_DECL)
+    ACE_THROW_SPEC ((CORBA::SystemException));
+
 private:
   CORBA::ORB_var orb_;
   // The ORB
